--- a/runtimes/datascience/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/datascience/ubi9-python-3.12/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # Datascience and useful extensions
-    'boto3~=1.37.8',
+    "boto3~=1.40.27",
     'kafka-python-ng~=2.2.3',
     'matplotlib~=3.10.1',
     'numpy~=2.2.6',
