RHAIENG-304, RHAIENG-786: chore(ci): don't activate the uv env in `security.yaml`, turns out rabbit was on the right track
* https://github.com/opendatahub-io/notebooks/pull/2217#discussion_r2309870517

--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -21,7 +21,9 @@ jobs:
         uses: astral-sh/setup-uv@v6
         with:
           version: "latest"
-          activate-environment: "false"
+          activate-environment: false
+          ignore-empty-workdir: true
+          enable-cache: false
 
       - name: Checkout code
         uses: actions/checkout@v5
