--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -100,7 +100,7 @@ jobs:
           # https://github.com/containers/common/issues/1735
           mkdir entitlement
           mkdir consumer
-          podman run \
+          docker run \
             -v ${PWD}/entitlement:/etc/pki/entitlement:Z \
             -v ${PWD}/consumer:/etc/pki/consumer:Z \
             --rm -t registry.access.redhat.com/ubi9/ubi \
