--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -1,4 +1,56 @@
 ####################
+# rpm-base         #
+####################
+FROM registry.access.redhat.com/ubi9/python-312:latest AS rpm-base
+
+USER root
+WORKDIR /root
+
+ENV HOME=/root
+
+ARG CODESERVER_SOURCE_CODE=codeserver/ubi9-python-3.12
+
+ARG NODE_VERSION=20
+
+ARG CODESERVER_VERSION=v4.98.0
+
+COPY ${CODESERVER_SOURCE_CODE}/get_code_server_rpm.sh .
+
+# create dummy file to ensure this stage is awaited before installing rpm
+RUN ./get_code_server_rpm.sh && touch /tmp/control
+
+#######################
+# wheel caching stage #
+#######################
+FROM registry.access.redhat.com/ubi9/python-312:latest AS whl-cache
+
+USER root
+WORKDIR /root
+
+ENV HOME=/root
+
+ARG CODESERVER_SOURCE_CODE=codeserver/ubi9-python-3.12
+
+# copy requirements and scripts
+COPY ${CODESERVER_SOURCE_CODE}/pylock.toml ./
+COPY ${CODESERVER_SOURCE_CODE}/devel_env_setup.sh ./
+
+# This stage installs (builds) all the packages needed and caches it in uv-cache
+# Important: Since HOME & USER for the python-312 has been changed,
+#            we need to ensure the same cache directory is mounted in
+#            the final stage with the necessary permissions to consume from cache
+RUN --mount=type=cache,target=/root/.cache/uv \
+    pip install --no-cache uv && \
+    # the devel script is ppc64le specific - sets up build-time dependencies
+    source ./devel_env_setup.sh && \
+    # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
+    #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
+    uv pip install --strict --no-deps --refresh --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
+
+# dummy file to make image build wait for this stage
+RUN touch /tmp/control
+
+####################
 # base             #
 ####################
 FROM registry.access.redhat.com/ubi9/python-312:latest AS base
@@ -15,6 +67,15 @@ RUN dnf -y upgrade --refresh --best --nodocs --noplugins --setopt=install_weak_d
 
 # Install useful OS packages
 RUN dnf install -y mesa-libGL skopeo && dnf clean all && rm -rf /var/cache/yum
+
+# (ARCH-ppc64le): since wheels are compiled from source, we need shared libs available at runtime
+RUN --mount=type=cache,from=whl-cache,source=/root/OpenBLAS,target=/OpenBlas,rw \
+    bash -c ' \
+        if [[ $(uname -m) == "ppc64le" ]]; then \
+            dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm; \
+            dnf install -y lcms2 libraqm libimagequant openjpeg2; \
+            PREFIX=/usr/ make install -C /OpenBlas; \
+        fi '
 
 # Other apps and tools installed as default user
 USER 1001
@@ -58,8 +119,13 @@ WORKDIR /opt/app-root/bin
 # Install useful OS packages
 RUN dnf install -y jq git-lfs libsndfile && dnf clean all && rm -rf /var/cache/yum
 
+# wait for rpm-base stage (rpm builds for ppc64le)
+COPY --from=rpm-base /tmp/control /dev/null
+
 # Install code-server
-RUN dnf install -y "https://github.com/coder/code-server/releases/download/${CODESERVER_VERSION}/code-server-${CODESERVER_VERSION/v/}-${TARGETARCH}.rpm" && \
+# Note: Use cache mounts, bind mounts fail on konflux
+RUN --mount=type=cache,from=rpm-base,source=/tmp/,target=/code-server-rpm/,rw \
+    dnf install -y "/code-server-rpm/code-server-${CODESERVER_VERSION/v/}-${TARGETARCH}.rpm" && \
     dnf -y clean all --enablerepo='*'
 
 COPY --chown=1001:0 ${CODESERVER_SOURCE_CODE}/utils utils/
@@ -138,18 +204,28 @@ ENV SHELL=/bin/bash
 
 ENV PYTHONPATH=/opt/app-root/bin/python3
 
-USER 1001
-
 # Install useful packages from requirements.txt
 COPY ${CODESERVER_SOURCE_CODE}/pylock.toml ./
 
+# wait for whl-cache stage (builds uv cache)
+COPY --from=whl-cache /tmp/control /dev/null
+
 # Install packages and cleanup
-RUN echo "Installing softwares and packages" && \
-    # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
-    #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
-    uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml && \
-    # Fix permissions to support pip in Openshift environments \
-    chmod -R g+w /opt/app-root/lib/python3.12/site-packages && \
+# install packages as USER 0 (this will allow us to consume uv cache)
+RUN --mount=type=cache,target=/root/.cache/uv \
+    echo "Installing softwares and packages" && \
+    # we can ensure wheels are consumed from the cache only by restricting internet access for uv install with '--offline' flag
+    uv pip install --offline --cache-dir /root/.cache/uv --requirements=./pylock.toml && \
+    # Note: debugpy wheel availabe on pypi (in uv cache) is none-any but bundles amd64.so files
+    #       Build debugpy from source instead
+    uv pip install --no-cache git+https://github.com/microsoft/debugpy.git@v$(grep -A1 '\"debugpy\"' ./pylock.toml | grep -Eo '\b[0-9\.]+\b') && \
+    # change ownership to default user (all packages were installed as root and has root:root ownership \
+    chown -R 1001:0 /opt/app-root/lib
+
+USER 1001
+
+# Fix permissions to support pip in Openshift environments
+RUN chmod -R g+w /opt/app-root/lib/python3.12/site-packages && \
     fix-permissions /opt/app-root -P
 
 WORKDIR /opt/app-root/src
