--- a/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "tensorflow-ubi9-python-3.12"
 version = "0.1.0"
-requires-python = ">=3.12, <3.13"
+requires-python = "==3.12.*"
 
 dependencies = [
     "tf2onnx~=1.16.1",
