--- a/base-images/cuda/12.6/c9s-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/12.6/c9s-python-3.12/Dockerfile.cuda
@@ -8,10 +8,10 @@ WORKDIR /opt/app-root/bin
 ####################
 # cuda-base        #
 ####################
-FROM quay.io/sclorg/python-312-c9s:c9s AS cuda-base-amd64
+FROM base AS cuda-base-amd64
 ENV NVARCH=x86_64
 
-FROM quay.io/sclorg/python-312-c9s:c9s AS cuda-base-arm64
+FROM base AS cuda-base-arm64
 ENV NVARCH=sbsa
 
 FROM cuda-base-${TARGETARCH} AS cuda-base
