--- a/.github/workflows/piplock-renewal.yaml
+++ b/.github/workflows/piplock-renewal.yaml
@@ -23,6 +23,14 @@ on:  # yamllint disable-line rule:truthy
           - '["3.11"]'
           - '["3.9"]'
           - '["3.8"]'
+      lockfiles_upgrade:
+        description: 'Force full relock and upgrades for pylock.toml (manual runs)'
+        required: false
+        default: 'false'
+        type: choice
+        options:
+          - 'true'
+          - 'false'
       update_optional_dirs:
         description: 'Include optional directories in update'
         required: false
@@ -48,6 +56,8 @@ jobs:
     env:
       BRANCH: ${{ github.event.inputs.branch || 'main' }}
       INCLUDE_OPT_DIRS: ${{ github.event.inputs.update_optional_dirs || 'false' }}
+      # Force full relock on scheduled runs. For manual runs, use the input toggle.
+      FORCE_LOCKFILES_UPGRADE: ${{ github.event_name == 'schedule' && '1' || (github.event.inputs.lockfiles_upgrade == 'true' && '1' || '0') }}
 
     steps:
       - name: Checkout code
@@ -75,6 +85,8 @@ jobs:
       - name: Run make refresh-pipfilelock-files
         run: |
           make refresh-pipfilelock-files PYTHON_VERSION=${{ matrix.python-version }} INCLUDE_OPT_DIRS=${{ env.INCLUDE_OPT_DIRS }}
+        env:
+          FORCE_LOCKFILES_UPGRADE: ${{ env.FORCE_LOCKFILES_UPGRADE }}
 
       - name: Commit changes (if any)
         run: |
