Update RStudio c9s flavos and its pipelines

--- a/rstudio/c9s-python-3.11/Dockerfile.cpu
+++ b/rstudio/c9s-python-3.11/Dockerfile.cpu
@@ -1,7 +1,8 @@
-#####################
-# base              #
-#####################
-FROM quay.io/sclorg/python-311-c9s:c9s AS base
+####################
+# cpu-base         #
+####################
+ARG BASE_IMAGE
+FROM ${BASE_IMAGE} AS cpu-base
 
 WORKDIR /opt/app-root/bin
 
@@ -35,7 +36,7 @@ WORKDIR /opt/app-root/src
 #####################
 # rstudio      #
 #####################
-FROM base AS rstudio
+FROM cpu-base AS rstudio
 
 ARG RSTUDIO_SOURCE_CODE=rstudio/c9s-python-3.11
 
