configuration ARGs should be on the top level on the Dockerfile

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -1,7 +1,11 @@
+#########################
+# configuration args    #
+#########################
+ARG BASE_IMAGE
+
 ####################
 # cpu-base         #
 ####################
-ARG BASE_IMAGE
 FROM ${BASE_IMAGE} AS cpu-base
 
 WORKDIR /opt/app-root/bin
