--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.rocm
@@ -1,7 +1,11 @@
+#########################
+# configuration args    #
+#########################
+ARG BASE_IMAGE
+
 ####################
 # rocm-base        #
 ####################
-ARG BASE_IMAGE
 FROM ${BASE_IMAGE} AS rocm-base
 
 WORKDIR /opt/app-root/bin
