--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cuda
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cuda
@@ -1,7 +1,11 @@
+#########################
+# configuration args    #
+#########################
+ARG BASE_IMAGE
+
 ####################
 # cuda-base        #
 ####################
-ARG BASE_IMAGE
 FROM ${BASE_IMAGE} AS cuda-base
 
 WORKDIR /opt/app-root/bin
