--- a/rstudio/c9s-python-3.11/Dockerfile.cuda
+++ b/rstudio/c9s-python-3.11/Dockerfile.cuda
@@ -1,7 +1,11 @@
+#########################
+# configuration args    #
+#########################
+ARG BASE_IMAGE
+
 ####################
 # cuda-base        #
 ####################
-ARG BASE_IMAGE
 FROM ${BASE_IMAGE} AS cuda-base
 
 WORKDIR /opt/app-root/bin
