NO-JIRA: only show crio debug info if we actually managed to install crio packages (#2256)
(cherry picked from commit 2bb7ebab6e11575a27bda3debb62940c7a4d8c02)

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -338,6 +338,7 @@ jobs:
 
       # https://cri-o.io/
       - name: Install cri-o
+        id: install-crio
         if: ${{ steps.have-tests.outputs.tests == 'true' }}
         run: |
           set -Eeuxo pipefail
@@ -425,7 +426,7 @@ jobs:
           sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
       - name: Show kubelet debug data (on failure)
-        if: ${{ failure() && steps.have-tests.outputs.tests == 'true' }}
+        if: ${{ failure() && steps.have-tests.outputs.tests == 'true' && steps.install-crio.outcome == 'success' }}
         run: |
           set -Eeuxo pipefail
 
