Update base images with the real odh base images

--- a/rstudio/c9s-python-3.11/build-args/cuda.conf
+++ b/rstudio/c9s-python-3.11/build-args/cuda.conf
@@ -1,1 +1,1 @@
-BASE_IMAGE=quay.io/rh_ee_atheodor/base-image-cuda-py311-c9s:v12.6 #TO BE UPDATED
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py311-c9s:v12.6
