Add missing matrix for multiplatform builds

--- a/.tekton/multiarch-push-pipeline.yaml
+++ b/.tekton/multiarch-push-pipeline.yaml
@@ -236,6 +236,11 @@ spec:
       workspace: git-auth
     - name: netrc
       workspace: netrc
+  - matrix:
+      params:
+      - name: PLATFORM
+        value:
+        - $(params.build-platforms)
   - name: build-container
     params:
     - name: IMAGE
