fixup FROM names

--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -170,7 +170,7 @@ RUN if [ "$TARGETARCH" = "ppc64le" ]; then \
 # onnx builder stage for ppc64le
 ###################################
 
-FROM base AS onnx-builder
+FROM cpu-base AS onnx-builder
 USER root
 WORKDIR /root
 
